[gd_scene load_steps=3 format=3 uid="uid://cbke1yb3m7dra"]

[ext_resource type="Script" path="res://Scripts/ItemRangedEditor.gd" id="1_my1v7"]
[ext_resource type="PackedScene" uid="uid://dsax7il2yggw8" path="res://Scenes/ContentManager/Custom_Widgets/DropEnabledTextEdit.tscn" id="2_crphu"]

[node name="ItemRangedEditor" type="Control" node_paths=PackedStringArray("UsedAmmoTextEdit", "UsedMagazineContainer", "RangeNumberBox", "SpreadNumberBox", "SwayNumberBox", "RecoilNumberBox", "UsedSkillTextEdit", "skill_xp_spin_box", "ReloadSpeedNumberBox", "FiringSpeedNumberBox")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_my1v7")
UsedAmmoTextEdit = NodePath("Ranged/UsedAmmoTextEdit")
UsedMagazineContainer = NodePath("Ranged/ScrollContainer/UsedMagazineContainer")
RangeNumberBox = NodePath("Ranged/RangeNumber")
SpreadNumberBox = NodePath("Ranged/SpreadNumber")
SwayNumberBox = NodePath("Ranged/SwayNumber")
RecoilNumberBox = NodePath("Ranged/RecoilNumber")
UsedSkillTextEdit = NodePath("Ranged/SkillHBoxContainer/UsedSkillTextEdit")
skill_xp_spin_box = NodePath("Ranged/SkillHBoxContainer/SkillXPSpinBox")
ReloadSpeedNumberBox = NodePath("Ranged/ReloadSpeedNumber")
FiringSpeedNumberBox = NodePath("Ranged/FiringSpeedNumber")

[node name="Ranged" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
columns = 2

[node name="UsedAmmoLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Ammo"

[node name="UsedAmmoTextEdit" type="TextEdit" parent="Ranged"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
focus_next = NodePath("../ScrollContainer/UsedMagazineContainer")
placeholder_text = "9mm"

[node name="UsedMagazineLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Magazine"

[node name="ScrollContainer" type="ScrollContainer" parent="Ranged"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UsedMagazineContainer" type="VBoxContainer" parent="Ranged/ScrollContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.9
focus_previous = NodePath("../../UsedAmmoTextEdit")

[node name="RangeLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Range"

[node name="RangeNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The width of this item in the inventory. A larger number means it will take up more horizontal inventory slots"
min_value = 100.0
max_value = 10000.0
step = 100.0
value = 1000.0

[node name="SpreadLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Spread"

[node name="SpreadNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The height of this item in the inventory. A larger number means it will take up more vertical inventory slots"
min_value = 1.0
value = 5.0

[node name="SwayLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Sway"

[node name="SwayNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The weight of this item in kg"
value = 5.0

[node name="RecoilLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Recoil"

[node name="RecoilNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The maximum recoil this weapon can have. When
firing the weapon continiously, the recoil starts at
0 and will reach it's maximum when 25% of the
magazine is spent. A smaller number means less maximum recoil"
min_value = 1.0
value = 20.0

[node name="UsedSkillLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Skill"

[node name="SkillHBoxContainer" type="HBoxContainer" parent="Ranged"]
layout_mode = 2

[node name="UsedSkillTextEdit" parent="Ranged/SkillHBoxContainer" instance=ExtResource("2_crphu")]
layout_mode = 2
tooltip_text = "The skill used when firing this weapon. This determines how well 
the player can control the weapon and deliver accurate shots."
myplaceholdertext = "Drop a skill from the list to the left"

[node name="SkillXPLabel" type="Label" parent="Ranged/SkillHBoxContainer"]
layout_mode = 2
text = "XP per shot:"

[node name="SkillXPSpinBox" type="SpinBox" parent="Ranged/SkillHBoxContainer"]
layout_mode = 2
tooltip_text = "The amount of xp the player gets per shot for the skill that is set. 
If no skill is set, the player gets no xp. If the firing speed is high, 
set a low amount of xp otherwise the skill gain will be quick."

[node name="ReloadSpeedLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Reload speed"

[node name="ReloadSpeedNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The time it takes to reload. A smaller number means faster reload"
min_value = 0.1
step = 0.1
value = 2.5

[node name="FiringSpeedLabel" type="Label" parent="Ranged"]
layout_mode = 2
text = "Firing speed"

[node name="FiringSpeedNumber" type="SpinBox" parent="Ranged"]
layout_mode = 2
tooltip_text = "The delay between shots. A smaller number means firing more quickly."
min_value = 0.01
step = 0.01
value = 0.25
